; ModuleID = '/home/carl/AnghaBench/vlc/modules/lua/libs/extr_misc.c_vlclua_get_object.c'
source_filename = "/home/carl/AnghaBench/vlc/modules/lua/libs/extr_misc.c_vlclua_get_object.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@LUA_REGISTRYINDEX = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @vlclua_get_object(i32* %0, i8* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i8*, align 8
  store i32* %0, i32** %3, align 8
  store i8* %1, i8** %4, align 8
  %6 = load i32*, i32** %3, align 8
  %7 = load i8*, i8** %4, align 8
  %8 = call i32 @lua_pushlightuserdata(i32* %6, i8* %7)
  %9 = load i32*, i32** %3, align 8
  %10 = load i32, i32* @LUA_REGISTRYINDEX, align 4
  %11 = call i32 @lua_rawget(i32* %9, i32 %10)
  %12 = load i32*, i32** %3, align 8
  %13 = call i8* @lua_topointer(i32* %12, i32 -1)
  store i8* %13, i8** %5, align 8
  %14 = load i32*, i32** %3, align 8
  %15 = call i32 @lua_pop(i32* %14, i32 1)
  %16 = load i8*, i8** %5, align 8
  ret i8* %16
}

declare dso_local i32 @lua_pushlightuserdata(i32*, i8*) #1

declare dso_local i32 @lua_rawget(i32*, i32) #1

declare dso_local i8* @lua_topointer(i32*, i32) #1

declare dso_local i32 @lua_pop(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
